now isssues column and order of issues are also stored in localStorage

--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
     "transformIgnorePatterns": [
       "node_modules/(?!axios)/"
     ]
+  },
+  "devDependencies": {
+    "jest-date-mock": "^1.0.9"
   }
 }
